# tedit

./: CMakeLists.txt  README.md
cmake/modules/: gmock.cmake
editor/: CMakeLists.txt  buffer.cpp  editor.cpp  editor2.cpp  screen.cpp
editor/include/: buffer.h  buffer_container.h  editor.h  editor2.h  keyboard.h  ncurses_keyboard.h  screen.h  textbuffer.h  textview.h  view.h  view_container.h
editor/unit-tests/: CMakeLists.txt  editor_test.cpp
event/: CMakeLists.txt  event-old  event.cpp
event/include/: event-old.h  event.h
event/unit-tests/: CMakeLists.txt  event_test.cpp
include/: buffer.h  log.h  view.h
libeditor/: CMakeLists.txt  buffer.cpp  buffer_container.cpp  editor.cpp  view.cpp
main/: CMakeLists.txt  main.cpp
screen/: CMakeLists.txt  ncurses_screen.cpp  screen.cpp
screen/include/: ncurses_screen.h  screen.h
screen/ncurses-test/: a.out  main.cpp
screen/unit-tests/: CMakeLists.txt  screen_test.cpp
unit-tests/event/: event_test.cpp  event_test.h  main.cpp
view/: CMakeLists.txt  text_view.cpp  view.cpp
view/include/: text_edit_view.h  text_view.h  view.h
view/unit-tests/: CMakeLists.txt  text_view_test.cpp  view_test.cpp
view/view-tests/: a.out  build.sh  main.cpp
